tests/NormalTests/paczka1/fuzzy1/64883766.err
Error in line 6: cSuBP A626 54,9
Error in line 1: ylR A626 98,7
Error in line 8: cSuBP A967 83,0
Error in line 25: kksmFPWxjGt A967 53,1
Error in line 26: GclxwBUHhf S24 76,9
